# ToyBitcask

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs
tests/: tests.rs
