[package]
name = "kvs"
version = "0.1.0"
authors = ["Ara Mambreyan <ara.mambreyan99@gmail.com>"]
description = "A simple key-value store: https://github.com/pingcap/talent-plan/blob/master/courses/rust/projects/project-1/README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
